--- a/zpeng/www/welcome.html
+++ b/zpeng/www/welcome.html
@@ -64,7 +64,7 @@
                 with  over 10 years' experience in data collection, data analysis and 
                 model development using Statistical and Machine Learning techniques.</p>
                 <p>On this website you will find more <a href="cv.html"> <b style="color: green">about me</b> </a> 
-                and some examples of my recent <a href="index.html"> <b style="color: green">projects</b> </a>. And also 
+                and some examples of my recent <a href="/ubuntu/zpeng/"> <b style="color: green">projects</b> </a>. And also 
                 you can find a list of <a href="cert.html"> <b style="color: green">certificates</b> </a> I earned recently.</p>
                 <p> My interests include data analytics, data visualization, data mining and machine learning. If you have data-related 
                 problems, or job opportunity that you feel may suit my experience and skills, 
@@ -78,36 +78,29 @@
                              
                              style="border-bottom-style: solid; border-bottom-width: thin; border-bottom-color: #336699; padding-bottom: 5px; font-family: Arial, Helvetica, sans-serif; font-weight: bold; color: #336699;" 
                              align="left">Highlights of my skills and experience:</th>
-                  <tr>                                      
-                  </tr>
-                  <tr>
+                   <tr>
                     <td>
-                        1. Over 10 years' experience in data analysis and numerical model development;
+                        1. Strong working knowledge and experience in Machine learing and data mining;
                     </td>                    
                   </tr> 
                   <tr>
                     <td>
-                        2. Strong working knowledge and experience in Machine learing and data mining;
-                    </td>                    
-                  </tr> 
-                  <tr>
-                    <td>
-                       3. Strong programing experience with R, Matlab, Python, Java and C++; 
+                       2. Strong programing experience with R, Matlab, Python, Java and C++; 
                     </td>                    
                   </tr>   
                   <tr>
                     <td>
-                        4. Knowlege of big data and hadoop, mapreduce, pig and hive;
+                        3. Knowlege of big data and hadoop, mapreduce, pig and hive;
                     </td>                    
                   </tr>  
                   <tr>
                     <td>
-                       5. Experience with Amazon aws cloud, EC2, EMR and S3.
+                       4. Experience with Amazon aws cloud, EC2, EMR and S3.
                     </td>                                      
                   </tr> 
                   <tr>
                     <td>
-                       6. More skills: SQL,HTML, Javascript,Git, Github, Labview
+                       5. More skills: SQL,HTML, Javascript,Git, Github, Labview
                     </td>                                      
                   </tr> 
             </table>                                         
