--- a/zpeng/www/cv.html
+++ b/zpeng/www/cv.html
@@ -31,7 +31,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
+                        <a href="http://ec2-54-191-5-153.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
@@ -77,7 +77,7 @@
                      <br />
                   <b style="color: green">Certificate and Training</b>
                      <ul>
-                <li><b>Data Science</b> specialization on Coursera by Jones Hopkins University </li>
+                <li><a href="cert.html"><b>Data Science</b> specialization</a> on Coursera by Jones Hopkins University </li>
             </ul>
                      <br />
                   <b style="color: green">Expericence</b>
