--- a/zpeng/www/index.html
+++ b/zpeng/www/index.html
@@ -26,15 +26,15 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
+                        <a href="http://www.zhiqiang-peng.com/" style="color: #FFFFFF">Home</a></td>
                     <td>
                         <a href="/ubuntu/zpeng/" style="color: #FFCC00">Projects</td>
                     <td>
-                        <a href="cert.html" style="color: #FFFFFF">Certificate</td>
+                        <a href="http://www.zhiqiang-peng.com/cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
-                        <a href="cv.html" style="color: #FFFFFF">Curriculum Vitae</td>
+                        <a href="http://www.zhiqiang-peng.com/cv.html" style="color: #FFFFFF">Curriculum Vitae</td>
                     <td>
-                        <a href="contact.html" style="color: #FFFFFF">Contact</td>
+                        <a href="http://www.zhiqiang-peng.com/contact.html" style="color: #FFFFFF">Contact</td>
                    </tr>                
                  </table>            
             </div>
