--- a/zpeng/www/contact.html
+++ b/zpeng/www/contact.html
@@ -29,7 +29,7 @@
                     <td>
                         <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
+                        <a href="http://ec2-54-191-5-153.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
