--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -28,7 +28,7 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
+                        <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
                         <a href="http://ec2-54-191-5-153.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
