--- a/zpeng/www/cv.html
+++ b/zpeng/www/cv.html
@@ -29,7 +29,7 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
+                        <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
                         <a href="http://ec2-54-191-5-153.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
@@ -56,10 +56,10 @@
     </div>  
         <div style="padding: 20px 30px 30px 30px; width: 840px; background-color: #FFFFFF; height:1100px; font-family: Arial, Helvetica, sans-serif;" 
            align="left">
+              <div> <a href="CV_Peng_Data_New.pdf" style="float: right; clear: both; font-family: Arial, Helvetica, sans-serif; font-size: x-small; font-weight: bold; color: #0000FF">download PDF</a></div>
               <div style="margin-top: 30px; margin-left: 40px; width: 85%">
                   <b style="color: green">Skills and Experience</b>
                      <ul style="font-size: 14; line-height: 22px;">
-                         <li>Over 10 years' experience in data analysis and numerical modeling;</li>
                          <li>Proficient in statistical analysis, data mining and machine learning techniques;</li>
                          <li>Strong experience with scripting languages R, Matlab and Python;  </li>
                          <li>Programming experience with C++ / C#, and Java; </li>
@@ -72,10 +72,10 @@
                   <b style="color: green">Education</b>
                      <ul style="font-size: 14; line-height: 22px;">
                 <li>Ph.D. in Physics, <a href="http://www.uni-goettingen.de"/>University of G&oumlttingen</a>, Germany</li>
-                <li>B.S. and M.S. in Physics, <a href="http://english.bnu.edu.cn/">Beijing Normal University</a>, China</li>
+                <!--<li>B.S. and M.S. in Physics, <a href="http://english.bnu.edu.cn/">Beijing Normal University</a>, China</li> -->
             </ul>
                      <br />
-                  <b style="color: green">Certificate and Training</b>
+                  <b style="color: green">Training and Certificates</b>
                      <ul>
                 <li><a href="cert.html"><b>Data Science</b> specialization</a> on Coursera by Jones Hopkins University </li>
             </ul>
@@ -87,7 +87,8 @@
                                 <td class="workt" ><b></b>Massachusetts</td>
                             </tr>
                         </table>                        
-                            <div class="workexp"> Consulting. See my recent projects. </div>
+                            <div class="workexp"> Freelance Consultant on data analytics and physics research. See my recent 
+                            projects <a href="http://ec2-54-191-5-153.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/"><b>here</b></a>. </div>
                             <br />
                         <table style="font-size: 14; align="left">
                             <tr><td class="yearW" style="width: 130px"><b>1/2008 - 3/2014</b></td>
@@ -95,15 +96,15 @@
                             </tr>
                         </table>
                             <div > 
-                                <ul><li>Worked with our OEM company (LG Electronics Corp.) to develop 
-                                        and optimize the performance of the Pocket-Photo Printer; </li>
-                                    <li>Designed experiments, acquired data and developed models to 
-                                        understand the relationships between printer-head temperature, color, media structure 
-                                        and printer-head structure to optimize the performance of our thermal printer; </li>
+                                <ul><li>Worked with LG Electronics Corp. (OEM) to develop 
+                                        the Pocket-Photo Printer, including designing experiments, acquiring data, 
+                                        performing calibrations and developing numerical models to optimize the 
+                                        performance of the thermal printer; </li>
                                     <li>Analyzed factory manufacturing data to improve the production and product quality; </li>
                                     <li>Developed a model-based calibration system as an in-line data acquisition & analysis tool
-                                        for  monitoring the quality of printing media;</li>
-                                    <li>Developed an printing-speed correction algorithm for  As a result the printer </li>
+                                        for monitoring and controling the quality of printing media;</li>
+                                    <li>Developed an printing-speed correction algorithm, which enables the printer to print at different 
+                                    speed without having to perform calibration for each printing speed.</li>
                                 </ul> <br />
                             </div>
                         <table style="font-size: 14; align="left">
@@ -114,11 +115,11 @@
                             <div class="workexp">Designed optical imaging system and developed image processing algorithms.<br /><br />
                             </div>
                         <table style="font-size: 14; align="left">
-                            <tr><td class="yearW" style="width: 130px"><b>8/2007 - 12/2007</b></td>
+                            <tr><td class="yearW" style="width: 130px"><b>12/2002 - 8/2007</b></td>
                                 <td class="workt" style="width: 500px"><b>Senior scientist, Pacific Nanotechnology Inc.,</b> California</td>
                             </tr>
                         </table>
-                            <div class="workexp">developed new AFM products including hardware and software. Selected projects: 
+                            <div class="workexp">Developed new AFM products including hardware and software. Selected projects: 
                                     developed a novel force sensor and a laser-less Atomic Force Microscope (AFM); 
                                     developed a numerical model of the force sensor to compute its sensitivity; 
                                     developed a high-speed AFM; developed Labview drivers for our AFM system; developed 
@@ -129,9 +130,10 @@
                                 <td class="workt" style="width: 500px"><b>Research associate, Dep. of Physics, Texas A&M University,</b></td>
                             </tr>
                         </table>
-                            <div class="workexp">Performed research in nano-technology; developed a low-temperature scanning 
+                            <div class="workexp">Performed research on nano-technology; developed a low-temperature scanning 
                                     probe microscope to image and manipulate single molecules on metal surfaces; 
-                                    Acquired and analyzed data, and developed theoretical models to understand the in<br /><br />
+                                    developed theoretical models to understand the the interactions between single molecule 
+                                    and metal surface<br /><br />
                         </div>               
                 
                            
