--- a/zpeng/www/index.html
+++ b/zpeng/www/index.html
@@ -26,7 +26,7 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="http://www.zhiqiang-peng.com/" style="color: #FFFFFF">Home</a></td>
+                        <a href="http://www.zhiqiang-peng.com/index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
                         <a href="/ubuntu/zpeng/" style="color: #FFCC00">Projects</td>
                     <td>
