--- a/zpeng/www/proj_stock.html
+++ b/zpeng/www/proj_stock.html
@@ -1,11 +1,11 @@
  <script src="shared/shiny.js" type="text/javascript"></script>  
   <h2>Stock Price Analysis</h2>
-  <p><b>Introduction</b> This is part of the project I am working on: to build a platform which allows users to analyse the data of their interest,
-  and to build their own predictive model.</p>
+  <p><b>Introduction</b> This is part of a project I am working on: to build a platform which allows users to analyse the data of their interest,
+  and to build their own predictive models.</p>
   <p>Here users can download historical stock price data, do simple exploratory analysis, and then choose the predictor variables 
   to build a classification model. The outcome of the model is the direction of the next-day stock price: up or down </p>
   <p> <b>Tools used:</b> Shiny, quantmod, classification models (KNN,LDA,QDA,CART, glm, randomForest),
-  html,javascript, so on. The page is hosted on a Amazon ec2 instance (t1.micro). Shiny serve is installed and configured on the ec2 instance by me. </p>
+  html,javascript, css so on. This page is hosted on a Amazon ec2 instance (t1.micro). Shiny serve is installed and configured on the ec2 instance by me. </p>
   <hr />
     <p><h3 align="center">Exploratory analysis</h3></p>
     <table align="center" style="width: 100%" cellspacing="20px">
@@ -33,7 +33,7 @@
     </tr>
     </table>
     <hr />
-    <p><h3 align="center">Predictive model of Up/Down of the stock price:</h3></p>
+    <p><h3 align="center">Predictive model of the direction of the stock price:</h3></p>
     <div>
     <table align="center" style="width: 100% " cellspacing="20px">
         <tr align="left" >
