--- a/zpeng/www/proj_centi.html
+++ b/zpeng/www/proj_centi.html
@@ -1,14 +1,14 @@
  <script src="shared/shiny.js" type="text/javascript"></script> 
  
  <h2 style="font-family: Arial, Helvetica, sans-serif; color: #3366CC"> Twitter Sentiment Analysis</h2>
- <p><b>Introduction</b> This is part of the project I am working on: to build a platform which allows users to analyse the data of their interest,
+ <p><b>Introduction</b> This is part of a project I am working on: to build a platform which allows users to analyse the data of their interest,
   and to build their own predictive model.</p>
-  <p>User can enter the twitter query and totla number of tweets they want to search. The app uses Twitter API to retrive the tweens, and 
+  <p>User can enter the twitter query and totla number of tweets they want to retrieve. This web application uses Twitter API to retrive the tweens, and 
   clean up the data (filter out R-rated tweets, and remove numbers, special symbols,  stopwords and stemming). After that it counts 
-  the number of positive words (N_pos) and negative works (N_neg) for each tweet. The sentiment of the query at anytime is a average of (N_pos-N_neg)
+  the number of positive words (N_pos) and negative works (N_neg) for each tweet. The sentiment of the query at anytime is a calcualted as 
+  the average of (N_pos-N_neg)
   of 100 tweets closest to that time. Note the time scale in the plot can vary greatly depending on the popularity of the query.</p>
-  <p>Searching twitter can be very slow. Part of the reason is that the page is hosted on a tier1 micro EC2 instance</p>
-  <p><b>Tools used:</b> R, shiny, text minging(tm), twitter search (twitteR), html,javascript, so on. The page is hosted on a Amazon ec2 
+  <p><b>Tools used:</b> R, shiny, text minging(tm), twitter search (twitteR), html,javascript, so on. This page is hosted on a Amazon ec2 
   instance (t1.micro). Shiny serve is installed and configured on the ec2 instance by me.</p>
    
 
@@ -36,7 +36,7 @@
         <td style="width: 70%">
             <div> 
             <div id="plot" class="shiny-plot-output" 
-            style="height: 400px"><h3 style="color: #003399">searching tweets now... (it may take 1 min to get 500 tweets)</h3></div> 
+            style="height: 400px"><h3 style="color: #003399">searching tweets now... (it may take 1 min to get 250 tweets)</h3></div> 
         </div>
            
           </td>
