--- a/zpeng/www/contact.html
+++ b/zpeng/www/contact.html
@@ -60,7 +60,7 @@
        <hr />
        <div style="margin-top: 40px; margin-left: 40px">
        <h2 style="color: green; font-family: 'Comic Sans MS'">Leave a comment:</h2>
-       <FORM action="mailto:you@yourdomain.com" method="post" enctype="text/plain">
+       <FORM action="mailto:jerry.peng2013@hotmail.com" method="post" enctype="text/plain">
             <TABLE BORDER="0" CELLSPACING="0" CELLPADDING="4" WIDTH="60%">
 <TR>
 <TD width="30%"><DIV align="right">
