--- a/zpeng/www/cv.html
+++ b/zpeng/www/cv.html
@@ -56,7 +56,8 @@
     </div>  
         <div style="padding: 20px 30px 30px 30px; width: 840px; background-color: #FFFFFF; height:1100px; font-family: Arial, Helvetica, sans-serif;" 
            align="left">
-              <div> <a href="CV_Peng_Data_New.pdf" style="float: right; clear: both; font-family: Arial, Helvetica, sans-serif; font-size: x-small; font-weight: bold; color: #0000FF">download PDF</a></div>
+              <div> <a href="CV_Peng_Data_New.pdf" style="float: right; clear: both; font-family: Arial, Helvetica, sans-serif; 
+                        font-size: x-small; font-weight: bold; color: #0000FF">download PDF</a></div>
               <div style="margin-top: 30px; margin-left: 40px; width: 85%">
                   <b style="color: green">Skills and Experience</b>
                      <ul style="font-size: 14; line-height: 22px;">
