--- a/zpeng/www/pa1.html
+++ b/zpeng/www/pa1.html
@@ -51,7 +51,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 
 
 <div id="analysis-of-the-personal-movement-date" class="section level2">
-<h2>Analysis of the personal movement date</h2>
+<h2>Analysis of the wearable activity data</h2>
 <p>Jerry Peng, 6-19-2014</p>
 <div id="instruction" class="section level3">
 <h3>Instruction</h3>
