--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -53,7 +53,7 @@
             <img alt="" src="pengLog_A.jpg"  height=75px/>              
 		</div>   
     </div> 
-    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px; font-family: Arial, Helvetica, sans-serif;" 
+    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; font-family: Arial, Helvetica, sans-serif; height: 100%;" 
            align="left"> 
          <div style="position: relative; top: 10px; left: 80px"> 
                 <p><b style="font-family: 'Comic Sans MS'; font-size: large; font-weight: bold; color: #339933">
