--- a/zpeng/www/contact.html
+++ b/zpeng/www/contact.html
@@ -52,7 +52,7 @@
             <img alt="" src="pengLog_A.jpg"  height=75px/>              
 		</div>   
     </div>  
-    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:500px" 
+    <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:100%" 
            align="left"> 
        <div style="margin-top: 30px; margin-left: 40px" ><h3>I am in the greater Boston Area.</h3></div>
        <div style="margin-top: 10px; margin-left: 60px" ><p><b>My Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com</p>
