--- a/zpeng/www/cv.html
+++ b/zpeng/www/cv.html
@@ -54,7 +54,7 @@
             <img alt="" src="pengLog_A.jpg"  height=75px/>              
 		</div>   
     </div>  
-        <div style="padding: 20px 30px 30px 30px; width: 840px; background-color: #FFFFFF; height:1100px; font-family: Arial, Helvetica, sans-serif;" 
+        <div style="padding: 20px 30px 30px 30px; width: 840px; background-color: #FFFFFF; font-family: Arial, Helvetica, sans-serif; overflow: auto;" 
            align="left">
               <div> <a href="CV_Peng_Data_New.pdf" style="float: right; clear: both; font-family: Arial, Helvetica, sans-serif; 
                         font-size: x-small; font-weight: bold; color: #0000FF">download PDF</a></div>
