--- a/zpeng/www/index.html
+++ b/zpeng/www/index.html
@@ -78,7 +78,7 @@
              </table>
       </div>  
       <div style="width: 900px; margin-top: 5px;">
-      <div id="main_3" style="padding: 20px 30px 30px 30px; width: 840px;  float: left; background-color: #FFFFFF; height: 100%;" 
+      <div id="main_3" style="padding: 20px 30px 30px 30px; width: 840px;  float: left; background-color: #FFFFFF;" 
            align="left">
         </div>
       </div>
