--- a/zpeng/www/pa1.html
+++ b/zpeng/www/pa1.html
@@ -55,7 +55,7 @@ if (window.hljs && document.readyState && document.readyState === "complete") {
 <p>Jerry Peng, 6-19-2014</p>
 <div id="instruction" class="section level3">
 <h3>Instruction</h3>
-<p>The activity monitoring devices such as <a href="http://www.fitbit.com">Fitbit</a>, <a href="http://www.nike.com/us/en_us/c/nikeplus-fuelband">Nike Fuelband</a>, or <a href="https://jawbone.com/up">Jawbone Up</a> are gaining popularity. Using these gadges, people can monitor their activities, “quantify” their movement, and find patterns of their behaviors, with the hope of improving their health.</p>
+<p>The activity monitoring devices such as <a href="http://www.fitbit.com">Fitbit</a>, <a href="http://www.nike.com/us/en_us/c/nikeplus-fuelband">Nike Fuelband</a>, or <a href="https://jawbone.com/up">Jawbone Up</a> are gaining popularity. With these gadgets, people can monitor their activities, “quantify” their movement, and find patterns of their behaviors, with the hope of improving their health.</p>
 <p>This report is to analyse the data collected from personal activity monitoring devices, and find the patterns of daily activities. The data, collected from an anonymous individual, includes step numbers taken in 5 minute interval each day in 2 months from October to November 2012. We found that there is a significant difference in activity patterns between weekdays and weekends.</p>
 </div>
 <div id="loading-and-preprocessing-the-data" class="section level3">
