--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -55,15 +55,14 @@
     </div> 
     <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; font-family: Arial, Helvetica, sans-serif; height: 100%;" 
            align="left"> 
-         <div style="position: relative; top: 10px; left: 80px"> 
+         <div style="width: 650px; margin-top: 20px; margin-left: 50px;"> 
                 <p><b style="font-family: 'Comic Sans MS'; font-size: large; font-weight: bold; color: #339933">
                     Data Science</b> specialization on Coursera</p>                   
             </div>
-         <div style="position: relative; top: 10px; left: 80px">by Johns Hopkins University</div>
-         <div style="position: relative; top: 30px; left: 80px">
-            <table id="course" align="left"                 
-                style="font-family: 'Comic Sans MS'; font-size: medium; font-weight: bold; color: #0000FF;" 
-                cellspacing="20px" width="60%">
+         <div style="margin-top: 10px; margin-left: 60px; width: 582px;" >by Johns Hopkins University</div>
+         <table id="course" align="left"                 
+                style="margin: 20px 20px 20px 70px; font-family: 'Comic Sans MS'; font-size: medium; " 
+                cellspacing="20px" width="75%">
                    <tr>
                    <th>Courses</th>
                    <th>Certificates</th>
@@ -104,8 +103,7 @@
                      <td><a href="https://www.coursera.org/course/devdataprod">9. Developing Data Products</td>
                      <td><a href="https://www.coursera.org/verify/RXZCNWD8LR">download</a></td>
                    </tr>                   
-                </table></div>	
-    </div>	        	
+                </table>              	
     </div>              
 </body>
 </html>
