--- a/zpeng/www/proj_stock.html
+++ b/zpeng/www/proj_stock.html
@@ -4,8 +4,7 @@
   and to build their own predictive models.</p>
   <p>Here users can download historical stock price data, do simple exploratory analysis, and then choose the predictor variables 
   to build a classification model. The outcome of the model is the direction of the next-day stock price: up or down </p>
-  <p> <b>Tools used:</b> Shiny, quantmod, classification models (KNN,LDA,QDA,CART, glm, randomForest),
-  html,javascript, css so on. This page is hosted on a Amazon ec2 instance (t1.micro). Shiny serve is installed and configured on the ec2 instance by me. </p>
+  <p> This page is hosted on a Amazon ec2 instance (t1.micro).</p>
   <hr />
     <p><h3 align="center">Exploratory analysis</h3></p>
     <table align="center" style="width: 100%" cellspacing="20px">
