new instance on ec2

--- a/zpeng/www/cv.html
+++ b/zpeng/www/cv.html
@@ -31,7 +31,7 @@
                     <td>
                         <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="projectGuide1.html" style="color: #FFFFFF">Projects</td>
+                        <a href="http://mypzq.shinyapps.io/zpeng" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
@@ -65,8 +65,8 @@
                          <li>Strong experience with scripting languages R, Matlab and Python;  </li>
                          <li>Programming experience with C++ / C#, and Java; </li>
                          <li>Knowledge of SQL and databases;</li>
-                         <li>Knowledge of big data and Hadoop, MapReduce, HDFS, Pig and Hive; </li>
-                         <li>Familiar with Amazon AWS cloud (EC2 , EMR and S3)</li>
+                         <li>Experience with Hadoop big data ecosystem, including Map-reduce, Pig, Hive, Mahout, Spark and Shark; </li>
+                         <li>Experience with Amazon AWS cloud (EC2 , EMR and S3)</li>
                          <li>Experience in digital signal and image processing;</li>
                     </ul> 
                     <br />
