--- a/zpeng/www/contact.html
+++ b/zpeng/www/contact.html
@@ -29,7 +29,7 @@
                     <td>
                         <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="projectGuide1.html" style="color: #FFFFFF">Projects</td>
+                        <a href="http://mypzq.shinyapps.io/zpeng" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
