new instance on ec2

--- a/zpeng/www/cert.html
+++ b/zpeng/www/cert.html
@@ -30,7 +30,7 @@
                     <td>
                         <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="http://mypzq.shinyapps.io/zpeng" style="color: #FFFFFF">Projects</td>
+                        <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFCC00">Certificate</td>
                     <td>
