--- a/zpeng/www/cv.html
+++ b/zpeng/www/cv.html
@@ -31,7 +31,7 @@
                     <td>
                         <a href="index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="http://mypzq.shinyapps.io/zpeng" style="color: #FFFFFF">Projects</td>
+                        <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFFFFF">Projects</td>
                     <td>
                         <a href="cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
@@ -89,7 +89,7 @@
                             </tr>
                         </table>                        
                             <div class="workexp"> Freelance Consultant on data analytics and physics research. See my recent 
-                            projects <a href="http://ec2-54-191-5-153.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/"><b>here</b></a>. </div>
+                            projects <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/"><b>here</b></a>. </div>
                             <br />
                         <table style="font-size: 14; align="left">
                             <tr><td class="yearW" style="width: 130px"><b>1/2008 - 3/2014</b></td>
