--- a/zpeng/www/index.html
+++ b/zpeng/www/index.html
@@ -28,7 +28,7 @@
                     <td>
                         <a href="http://www.zhiqiang-peng.com/index.html" style="color: #FFFFFF">Home</a></td>
                     <td>
-                        <a href="http://mypzq.shinyapps.io/zpeng" style="color: #FFCC00">Projects</td>
+                        <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/zpeng/" style="color: #FFCC00">Projects</td>
                     <td>
                         <a href="http://www.zhiqiang-peng.com/cert.html" style="color: #FFFFFF">Certificate</td>
                     <td>
