new instance on ec2

--- a/peng-research/www/welcome.html
+++ b/peng-research/www/welcome.html
@@ -60,8 +60,7 @@
            align="left">
 			<div style=" width: 750px; padding-top: 20px; padding-left: 40px;">
                 <p> <b>Welcome to my website. </b> I am an physicist and data scientist 
-                with  over 10 years' experience in data analytics and 
-                model development using Statistical and Machine Learning techniques.</p>                
+                with  over 10 years' experience in data analysis and numerical modeling.</p>                
                 <p> My interests include data analytics, data visualization, data mining and machine learning. If you have data-related 
                 problems, or job opportunity that you feel may suit my experience and skills, 
                 please feel free to <a href="contact.html"> <b style="color: green">email me</b></a>.
