--- a/peng-research/www/proj_stock.html
+++ b/peng-research/www/proj_stock.html
@@ -1,4 +1,4 @@
- <script src="shared/shiny.js" type="text/javascript"></script>  
+ <script src="shared/shiny.js" type="text/javascript"></script>   
   <h2>Stock Price Analysis</h2>
   <p><b>Introduction</b> This is part of a project I am working on: to build a platform which allows users to analyse the data of their interest,
   and to build their own predictive models.</p>
@@ -14,7 +14,7 @@
             <p> <label><b>Enter Stock Symbol:</b></label><br /> 
                 <input type="text" name="stock_name" value="AAPL"/></p>
             <p> <label><b>Enter Start date:</b></label><br /> 
-                <input type="text" name="start_date" value="2014-01-01"/></p>
+                <input type="text" name="start_date" value="2013-10-01"/></p>
             <p> <label><b>Enter end date:</b></label><br /> 
                 <input type="text" name="end_date" value="2014-06-01"/></p>
             <p> <label><b>Type of charts:</b></label><br /> 
@@ -48,19 +48,15 @@
                     <input type="checkbox" name="retSP" value="retSP" checked>Return of S&P index<br />
                     <input type="checkbox" name="retNA" value="retNA">Return of Nasdaq index<br />
                 </form>  
-            </td>
-            <td style="width: 70%" valign="top">             
-                <div style="border-bottom-style: solid; border-bottom-width: thin; clear: both; width: 100%;">
-                    <h3>Model Performance: confusion matrix</h3>
-                    <label><b>Divide data into training / Testing datasets:</b></label><br />
-                     <input type="number" name="sampleR" max=1 min=0 step=0.01 value="0.7"/> proportion of training dataset<br />
+                <label><b>Split data into training / testing datasets:</b></label><br />
+                     <input type="number" name="sampleR" max=1 min=0 step=0.01 value="0.7"/> training data<br />
                 <label><b>Select model:</b></label><br /> 
                     <select name="model">                    
                     <option value="logireg">Logistic regression</option>  
                     <option value="lda">Linear Discriminant Analysis(LDA)</option>
                     <option value="qda">Quadratic Discriminant Analysis(QDA)</option>
                     <option value="knn">K-Nearest Neighbors (KNN) </option>
-                    <option value="tree">Clasification Tree (CART) </option>    
+                    <option value="tree">Clasification Tree </option>    
                     <option value="rf">Random Forest </option>  
                     <!--<option value="svm">SVM -linear kernel (slow)</option>  
                     <option value="svm_poly">SVM -Polynomial kernel (slow)</option>  
@@ -68,7 +64,12 @@
                 </select>   
                 <div align="left" style="width: 200px; border-right-style: groove; border-bottom-style: groove; 
                     border-left-style: groove;"><div id="testControls" class="shiny-html-output" align="left"></div>
-                </div>          
+                </div> 
+            </td>
+            <td style="width: 70%" valign="top">             
+                <div style="border-bottom-style: solid; border-bottom-width: thin; clear: both; width: 100%;">
+                    <h3>Model Performance:</h3>
+                    <pre id="summ1" class="shiny-text-output" style="color: #3366CC"></pre>          
                     <!-- <div id="rocresult" style="height: 320px" class="shiny-plot-output" >validate</div> -->
                 </div>  
                 <div style="height: 100px; margin-top: 10px">                  
