--- a/peng-research/www/proj_stock.html
+++ b/peng-research/www/proj_stock.html
@@ -67,9 +67,9 @@
                 </div> 
             </td>
             <td style="width: 70%" valign="top">             
-                <div style="border-bottom-style: solid; border-bottom-width: thin; clear: both; width: 100%;">
+                <div style="border-bottom-style: solid; border-bottom-width: thin; clear: both;">
                     <h3>Model Performance:</h3>
-                    <pre id="summ1" class="shiny-text-output" style="color: #3366CC"></pre>          
+                    <pre id="summ1" class="shiny-text-output" style="color: #3366CC;"></pre>          
                     <!-- <div id="rocresult" style="height: 320px" class="shiny-plot-output" >validate</div> -->
                 </div>  
                 <div style="height: 100px; margin-top: 10px">                  
