--- a/peng-research/www/proj_centi.html
+++ b/peng-research/www/proj_centi.html
@@ -34,7 +34,7 @@
         <td style="width: 70%">
             <div> 
             <div id="plot" class="shiny-plot-output" 
-            style="height: 400px"><h3 style="color: #003399">searching tweets now... (it may take 1 min to get 250 tweets)</h3></div> 
+            style="height: 400px"><h3 style="color: #003399">searching tweets now... (it may take about 20s to get 250 tweets)</h3></div> 
         </div>
            
           </td>
