--- a/zpeng/www/proj_stock.html
+++ b/zpeng/www/proj_stock.html
@@ -67,17 +67,17 @@
                 </div> 
             </td>
             <td style="width: 70%" valign="top">             
-                <div style="border-bottom-style: solid; border-bottom-width: thin; clear: both;">
+                <div style="border-bottom-style: solid; border-bottom-width: thin; clear: both; width: 100%;">
                     <h3>Model Performance:</h3>
-                    <pre id="summ1" class="shiny-text-output" style="color: #3366CC;"></pre>          
+                    <pre id="summ1" class="shiny-text-output" style="color: #3366CC"></pre>          
                     <!-- <div id="rocresult" style="height: 320px" class="shiny-plot-output" >validate</div> -->
                 </div>  
                 <div style="height: 100px; margin-top: 10px">                  
-                    <div style="float: left; border-right-style: solid; border-right-width: thin; width: 50%;"><b>Training performance: </b>
+                    <div style="float: left; border-right-style: solid; border-right-width: thin; width: 46%;"><b>Training: </b>
                         <div id="ConfusionTrain" class="shiny-html-output">training</div>
                         <div id="resultTrain" class="shiny-text-output" style="color: green">training</div>
                     </div>       
-                    <div style="float: right; "><b>Model validation (test dataset):</b> 
+                    <div style="float: left; "><b>validation (test dataset):</b> 
                         <div id="ConfusionTest" class="shiny-html-output">validate</div>  
                         <div id="resultTest" class="shiny-text-output" style="color: green">validate</div>
                     </div>
