--- a/zpeng/www/proj_stock.html
+++ b/zpeng/www/proj_stock.html
@@ -78,7 +78,7 @@
                         <div id="ConfusionTrain" class="shiny-html-output">training</div>
                         <div id="resultTrain" class="shiny-text-output" style="color: green">training</div>
                     </div>       
-                    <div style="float: right; width: 55%;" align="center"><b>validation (test dataset):</b> 
+                    <div style="float: right;" align="center"><b>validation (test dataset):</b> 
                         <div id="ConfusionTest" class="shiny-html-output">validate</div>  
                         <div id="resultTest" class="shiny-text-output" style="color: green">validate</div>
                     </div>
