--- a/zpeng/www/proj_stock.html
+++ b/zpeng/www/proj_stock.html
@@ -72,13 +72,13 @@
                     <pre id="summ1" class="shiny-text-output" style="color: #3366CC"></pre>          
                     <!-- <div id="rocresult" style="height: 320px" class="shiny-plot-output" >validate</div> -->
                 </div>  
-                <div style="height: 100px; margin-top: 10px">                  
+                <div style="height: 100px; margin-top: 10px" align="center">                  
                     <div style="float: left; border-right-style: solid; border-right-width: thin; width: 45%;" 
                         align="center"><b>Training: </b>
                         <div id="ConfusionTrain" class="shiny-html-output">training</div>
                         <div id="resultTrain" class="shiny-text-output" style="color: green">training</div>
                     </div>       
-                    <div style="float: right;" align="center"><b>validation (test dataset):</b> 
+                    <div style="float: right; width: 52%;" ><b>validation (test dataset):</b> 
                         <div id="ConfusionTest" class="shiny-html-output">validate</div>  
                         <div id="resultTest" class="shiny-text-output" style="color: green">validate</div>
                     </div>
