--- a/peng-research/www/index.html
+++ b/peng-research/www/index.html
@@ -26,13 +26,13 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
+                        <a href="http://www.zhiqiang-peng.com/welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
                         <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/peng-research/" style="color: #FFCC00">Projects</td>
                     
                    
                     <td>
-                        <a href="contact.html" style="color: #FFFFFF">Contact</td>
+                        <a href="http://www.zhiqiang-peng.com/contact.html" style="color: #FFFFFF">Contact</td>
                    </tr>                
                  </table>            
             </div>
