--- a/zpeng/www/contact.html
+++ b/zpeng/www/contact.html
@@ -27,12 +27,12 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="welcome.html" style="color: #FFFFFF">Home</a></td>
+                        <a href="http://www.zhiqiang-peng.com/welcome.html" style="color: #FFFFFF">Home</a></td>
                     <td>
                         <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/peng-research/" style="color: #FFFFFF">Projects</td>
                     
                     <td>
-                        <a href="contact.html" style="color: #FFCC00">Contact</td>
+                        <a href="http://www.zhiqiang-peng.com/contact.html" style="color: #FFCC00">Contact</td>
                    </tr>                
                  </table>            
             </div>
@@ -51,9 +51,9 @@
     </div>  
     <div id="cert_1" style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; height:100%" 
            align="left"> 
-       <div style="margin-top: 30px; margin-left: 40px" ><h3>I am in the greater Boston Area.</h3></div>
-       <div style="margin-top: 10px; margin-left: 60px" ><p><b>My Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com</p>
-       <p><b>My Phone:</b> &nbsp 949-232-9346</p></div> 
+       <div style="margin-top: 30px; margin-left: 40px" ><h3>I am in the Greater Boston area.</h3></div>
+       <div style="margin-top: 10px; margin-left: 60px" ><p><b>Email:</b> &nbsp &nbsp jerry.peng2013@hotmail.com</p>
+       <p><b>Phone:</b> &nbsp 949-232-9346</p></div> 
        <hr />
        <div style="margin-top: 40px; margin-left: 40px">
        <h2 style="color: green; font-family: 'Comic Sans MS'">Leave a comment:</h2>
