--- a/zpeng/www/welcome.html
+++ b/zpeng/www/welcome.html
@@ -33,13 +33,13 @@
                 <table align="center" class="menu_table">
                   <tr>
                     <td>
-                        <a href="welcome.html" style="color: #FFCC00">Home</a></td>
+                        <a href="http://www.zhiqiang-peng.com/welcome.html" style="color: #FFCC00">Home</a></td>
                     <td>
                         <a href="http://ec2-54-191-29-17.us-west-2.compute.amazonaws.com:3838/ubuntu/peng-research/" style="color: #FFFFFF">Projects</td>
                     
                     
                     <td>
-                        <a href="contact.html" style="color: #FFFFFF">Contact</td>
+                        <a href="http://www.zhiqiang-peng.com/contact.html" style="color: #FFFFFF">Contact</td>
                    </tr>                
                  </table>            
             </div>
@@ -59,7 +59,7 @@
     <div style="padding: 20px 30px 30px 30px; width: 840px;   background-color: #FFFFFF; font-family: Arial, Helvetica, sans-serif; overflow: auto; height: 100%;" 
            align="left">
 			<div style=" width: 750px; padding-top: 20px; padding-left: 40px;">
-                <p> <b>Welcome to my website. </b> I am an physicist and data scientist 
+                <p> <b>Welcome to my website. </b> I am a physicist and data scientist 
                 with  over 10 years' experience in data analysis and numerical modeling.</p> 
                 <br />
                 <table style="margin-top: 10px; padding-left: 10px;" 
